Publications, Talks and Writings

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,12 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "🐸 A summary of the paper: <i>Recent evolutionary history of the Lost World endemics: Population genetics, species delimitation, and phylogeography of sky-island treefrogs</i>"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/2017-03-23-Resume-Lost-World-Endemics
+venue: "Laval University"
+date: 2017-03-23
+location: "Québec, Canada"
 ---
+An oral presentation in the course <i>BIF-4002 Statistical Genetics: Concepts and Analysis</i> where I summarized the fascinating paper of Salerno <i>et al.</i> (2015) and showed funny/cute images of frogs.
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+[View the presentation](https://drive.google.com/file/d/1F5i9O7qGApCeF481DSC-ahmRWLYcK9Pa/view?usp=sharing)
