--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,13 +1,12 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "🧬 A summary of <i>Gene Ontology</i>"
 collection: talks
 type: "Talk"
-permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+permalink: /talks/2015-12-09-Gene-Ontology
+venue: "Laval University"
+date: 2015-12-09
+location: "Québec, Canada"
 ---
+An oral presentation in the course BIF-1000: Profession in bioinformatics where I made a tutorial on Gene Ontology and used a blue font on a blue background.
 
-[More information here](http://example2.com)
-
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+[View the presentation](https://drive.google.com/file/d/1PX72eeQ_0ShLM3h7ab6hln-9P6pXTp53/view?usp=sharing)
