--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,11 +1,12 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "💻 Internship in Bioinformatics"
 collection: talks
-type: "Conference proceedings talk"
-permalink: /talks/2014-03-01-talk-3
-venue: "Testing Institute of America 2014 Annual Conference"
-date: 2014-03-01
-location: "Los Angeles, CA"
+type: "Talk"
+permalink: /talks/2016-09-18-Internship
+venue: "Laval University"
+date: 2016-09-18
+location: "CERVO Brain research centre, Canada"
 ---
+During the summer of 2016, I completed an internship in bioinformatics at the CERVO Brain Research Centre, where I worked on a signalling pathway regulating synaptic plasticity. This presentation summarizes my experience and findings.
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+[See presentation](https://drive.google.com/file/d/1o6-Hy6hHFmJhn1TuM5YhIRGrabp5zEln/view?usp=sharing)
