--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -6,6 +6,8 @@ permalink: /talks/2017-03-23-Resume-Lost-World-Endemics
 venue: "Laval University"
 date: 2017-03-23
 location: "Québec, Canada"
+header:
+    teaser: ../images/talks/Recent evolutionary history of Lost World endemics.png
 ---
 An oral presentation in the course <i>BIF-4002 Statistical Genetics: Concepts and Analysis</i> where I summarized the fascinating paper of Salerno <i>et al.</i> (2015) and showed funny/cute images of frogs.
 
