--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -6,6 +6,8 @@ permalink: /talks/2015-12-09-Gene-Ontology
 venue: "Laval University"
 date: 2015-12-09
 location: "Québec, Canada"
+header:
+    teaser: ../images/talks/GeneOntology.png
 ---
 An oral presentation in the course BIF-1000: Profession in bioinformatics where I made a tutorial on Gene Ontology and used a blue font on a blue background.
 
