--- a/_talks/2014-03-01-talk-11.md
+++ b/_talks/2014-03-01-talk-11.md
@@ -6,6 +6,8 @@ permalink: /talks/2020-02-05-Learning-Abstraction
 venue: "DAMAS Lab"
 date: 2020-02-05
 location: "Laval University, Canada"
+header:
+    teaser: ../images/talks/Learning_by_Abstraction.png
 ---
 With other members of the lab, we occasionnaly met one day/afternoon to present interesting research papers. In this meeting, I presented the symbolic work of Hudshon and Manning (2019) in NIPS'19.
 
