--- a/_talks/2014-03-01-talk-12.md
+++ b/_talks/2014-03-01-talk-12.md
@@ -6,6 +6,8 @@ permalink: /talks/2019-10-31-TDAPNet
 venue: "DAMAS Lab"
 date: 2019-10-31
 location: "Laval University, Canada"
+header:
+    teaser: ../images/talks/TDAPNet.png
 ---
 With other members of the lab, we occasionnaly met one day/afternoon to present interesting research papers. In this meeting, I presented the robust work of Xiao <i>et al.</i> (2019).
 
