--- a/_talks/2014-03-01-talk-14.md
+++ b/_talks/2014-03-01-talk-14.md
@@ -6,6 +6,8 @@ permalink: /talks/2020-03-12-Visual-Concept
 venue: "DAMAS Lab"
 date: 2020-03-12
 location: "Laval University, Canada"
+header:
+    teaser: ../images/talks/Visual_Concept_Metaconcept_Learning.png
 ---
 With other members of the lab, we occasionnaly met one day/afternoon to present interesting research papers. In this meeting, I presented the meta-conceptual work of Han <i>et al.</i> (2019) in NIPS'19.
 
