--- a/_talks/2014-03-01-talk-16.md
+++ b/_talks/2014-03-01-talk-16.md
@@ -6,6 +6,8 @@ permalink: /talks/2020-09-20-Visual-Representation
 venue: "Laval University"
 date: 2020-09-20
 location: "Canada"
+header:
+    teaser: ../images/talks/CAOS.png
 ---
 In this seminar I present the prototype of a project, Class-Agnostic Object Segmentation (CAOS), that uses self-attention to learn local representations. I discuss the idea from four different perspectives: 1) clustering, 2) few-shot learning, 3) compositionality and disentanglement, and 4) graph theory. I show promising preliminary results.
 
