--- a/_talks/2014-03-01-talk-18.md
+++ b/_talks/2014-03-01-talk-18.md
@@ -6,6 +6,8 @@ permalink: /talks/2020-12-14-Top-5
 venue: "Laval University"
 date: 2020-12-14
 location: "Canada"
+header:
+    teaser: ../images/talks/NeurIPS_20.png
 ---
 With other members of the lab, we occasionnaly met one day/afternoon to present interesting research papers. In this meeting, I selected my top 5 papers of NeurIPS'20: 1) CrossTransformers, 2) Attribute Prototype Networks, 3) Few-shot Learning on Graphs, 4) Compositional Explanations of Neurons and 5) Contextualized Object Embeddings.
 
