--- a/_talks/2014-03-01-talk-19.md
+++ b/_talks/2014-03-01-talk-19.md
@@ -6,6 +6,8 @@ permalink: /talks/2021-02-12-Reconnaissance-Objets
 venue: "Laval University"
 date: 2021-02-12
 location: "Canada"
+header:
+    teaser: ../images/talks/reconnaissance_contexte.png
 ---
 Le Few-shot Learning vise à reconnaître de nouvelles classes d'objets à partir de peu d'exemples d'entraînement. C'est en soi un problème fort difficile et les modèles existants en vue de le résoudre ont principalement été développés pour des ensembles de données relativement « simples » où chaque image ne contient qu'un seul objet. Dans mes travaux, je propose d'étudier le Few-shot Learning dans le cadre d'images de scènes complexes et, par le fait même, d'exploiter la sémantique du contexte pour apprendre et reconnaître les objets plus facilement. Je montrerai dans cette présentation comment j'ai modélisé la sémantique du contexte, et je décrirai par la suite deux modules que j'ai développés pour intégrer la contextualité au Few-shot Learning.
 
