--- a/_talks/2014-03-01-talk-20.md
+++ b/_talks/2014-03-01-talk-20.md
@@ -6,6 +6,8 @@ permalink: /talks/2022-10-27-Class-Similarity
 venue: "Laval University"
 date: 2022-10-27
 location: "Canada"
+header:
+    teaser: ../images/talks/Class_Similarity_pptx.png
 ---
 With other members of the lab, we occasionnaly met one day/afternoon to present interesting research papers. In this meeting, I presented the distilled work of Phan <i>et al.</i> (2022) in CVPR'22.
 
