--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -6,6 +6,8 @@ permalink: /talks/2016-09-18-Internship
 venue: "Laval University"
 date: 2016-09-18
 location: "CERVO Brain research centre, Canada"
+header:
+    teaser: ../images/talks/présentation stage 2016.png
 ---
 During the summer of 2016, I completed an internship in bioinformatics at the CERVO Brain Research Centre, where I worked on a signalling pathway regulating synaptic plasticity. This presentation summarizes my experience and findings.
 
