--- a/_talks/2014-03-01-talk-4.md
+++ b/_talks/2014-03-01-talk-4.md
@@ -6,6 +6,8 @@ permalink: /talks/2019-02-24-Multimodal-Sentiment
 venue: "ICPRAM'19"
 date: 2019-02-24
 location: "Prague, Czech Republic"
+header:
+    teaser: ../images/talks/Multimodal Sentiment Analysis_ A Multitask Learning Approach.png
 ---
 Presentation of our research paper at the <i>International Conference on Pattern Recognition Applications and Methods (ICPRAM'19)</i>.
 
