--- a/_talks/2014-03-01-talk-5.md
+++ b/_talks/2014-03-01-talk-5.md
@@ -6,6 +6,8 @@ permalink: /talks/2019-06-05-Multimodal-Emotion
 venue: "WCRML'19"
 date: 2019-06-05
 location: "Ottawa, Canada"
+header:
+    teaser: ../images/talks/multimodal_multitask_emotion_recognition.png
 ---
 Presentation of our research paper at the <i>ACM Workshop on Crossmodal Learning and Application (WCRML'19)</i>.
 
