--- a/_talks/2014-03-01-talk-6.md
+++ b/_talks/2014-03-01-talk-6.md
@@ -6,6 +6,8 @@ permalink: /talks/2021-01-05-Towards-Contextual
 venue: "WACV'21"
 date: 2021-01-05
 location: "Hawaï, USA <small>but remoly from my home due to Covid restrictions </small>&#x1F641;"
+header:
+    teaser: ../images/talks/wacv_presentation.png
 ---
 Presentation of our research paper at the <i>Winter Conference on Applications of Computer Vision (WACV'21)</i>.
 
