--- a/_talks/2014-03-01-talk-7.md
+++ b/_talks/2014-03-01-talk-7.md
@@ -6,6 +6,8 @@ permalink: /talks/2022-04-04-Comment-Eviter
 venue: "Semaine numériQC 2022"
 date: 2022-04-04
 location: "Terminal - Port de Québec, Canada"
+header:
+    teaser: ../images/talks/rendez-vous-ia.png
 ---
 Won 1st place (2000$) at the [AI and Data University Research Competition 2022: Methods of Artificial Intelligence and Data Processing](https://iid.ulaval.ca/journees-de-la-releve-en-intelligence-et-donnees-2022-douze-bourses-remises-a-des-etudiants-aux-cycles-superieurs-de-luniversite-laval/).
 
