--- a/_talks/2014-03-01-talk-8.md
+++ b/_talks/2014-03-01-talk-8.md
@@ -6,6 +6,8 @@ permalink: /talks/2022-07-28-Continual-Semantic
 venue: "IJCAI'22"
 date: 2022-07-28
 location: "Vienna, Austria"
+header:
+    teaser: ../images/talks/ijcai_poster.png
 ---
 Presentation of our research paper at the <i>International Joint Conference on Artificial Intelligence 2022 (IJCAI'22)</i>.
 
