--- a/_talks/2014-03-01-talk-10.md
+++ b/_talks/2014-03-01-talk-10.md
@@ -6,6 +6,8 @@ permalink: /talks/2019-05-29-Linknet
 venue: "DAMAS Lab"
 date: 2019-05-29
 location: "Laval University, Canada"
+header:
+    teaser: ../images/talks/TADAM.png
 ---
 With other members of the lab, we occasionnaly met one day/afternoon to present interesting research papers. In this meeting, I presented the dynamic work of Oreshkin <i>et al.</i> (2018) in NIPS'18.
 
