--- a/_talks/2014-03-01-talk-15.md
+++ b/_talks/2014-03-01-talk-15.md
@@ -6,6 +6,8 @@ permalink: /talks/2020-05-28-Research-Proposal
 venue: "Laval University"
 date: 2020-05-28
 location: "Canada"
+header:
+    teaser: ../images/talks/research_proposal.png
 ---
 Convolutional networks have been very successful in the last decade in digital vision. Generally, these networks are able to learn good quality representations due to their compositional nature, that is, they are able to learn representations of higher level of abstraction with each layer of convolution. While it is certain that convolutional networks are compositional in the mathematical sense, recent work nevertheless question the hypothesis that these networks are conceptually compositional in the sense that they would learn to compose high-level concepts. On the contrary, convolutional networks would rather learn to detect surface textures on images, which could explain their vulnerability to conflicting examples, their difficulty in generalizing to data outside the training distribution, their need for a large number of training data, and many more.
 
