--- a/_talks/2014-03-01-talk-21.md
+++ b/_talks/2014-03-01-talk-21.md
@@ -6,6 +6,7 @@ permalink: /talks/2023-10-02-Class-Incremental
 venue: "8th Workshop on Computer Vision in Plant Phenotyping and Agriculture (CVPPA)"
 date: 2023-10-02
 location: "Paris, France"
+header:
+    teaser: ../images/talks/Poster_CVPPA_2023.png
 ---
-
 
