--- a/_talks/2014-03-01-talk-21.md
+++ b/_talks/2014-03-01-talk-21.md
@@ -1,5 +1,5 @@
 ---
-title: "🌿 Coming soon: Class-Incremental Learning of Plant and Disease Detection: Growing Branches with Knowledge Distillation"
+title: "🌿 Class-Incremental Learning of Plant and Disease Detection: Growing Branches with Knowledge Distillation"
 collection: talks
 type: "Workshop proceedings talk"
 permalink: /talks/2023-10-02-Class-Incremental
