--- a/_talks/2014-03-01-talk-22.md
+++ b/_talks/2014-03-01-talk-22.md
@@ -14,3 +14,5 @@ L’apprentissage profond s’est particulièrement illustré en vision par ordi
 Dans nos travaux, nous visons à améliorer l’adaptabilité et l’extensibilité des réseaux de neurones, c’est-à-dire leur capacité à apprendre de nouvelles tâches efficacement et leur capacité à acquérir continuellement de nouvelles connaissances sans oublier leurs acquis précédents au fil du temps. Dans le cadre de cette thèse, nous avons étudié ces deux propriétés, l’adaptabilité et l’extensibilité, en travaillant sur l'apprentissage à partir de peu d'exemples (few-shot learning) et l'apprentissage continuel.  
 
 Premièrement, nous avons proposé une méthode d'apprentissage qui exploite des relations contextuelles et des représentations multimodales pour former de meilleurs prototypes de classe, permettant l'adaptation à de nouvelles tâches avec seulement quelques exemples. Deuxièmement, nous avons proposé un module d'apprentissage faiblement supervisé pour l’apprentissage continuel de la segmentation sémantique afin d'aborder les problèmes de dérive de l'arrière-plan (background shift) et des coûts élevés d'annotation. Nous avons également introduit deux variantes d'un mécanisme de révision qui permet de rejouer des régions d'images ou des caractéristiques intermédiaires sous la forme d'une technique d'augmentation de données. Nous avons ensuite exploré l'apprentissage incrémental de la segmentation d'instances en développant la première architecture dynamique conçue pour cette tâche, une nouvelle méthode de distillation des connaissances qui améliore la plasticité, et une astuce de moyennage des poids pour équilibrer manuellement l'apprentissage et l'oubli. Enfin, nous avons appliqué ce modèle à l'apprentissage incrémental de la détection d'objets dans un contexte d'applications agricoles telles que la détection de plantes et de maladies.
+
+[Voir presentation](https://drive.google.com/file/d/1SuuzXiw0j9HkJA9K-mnda2euJjxMTKQv/view?usp=sharing)
